# logos-format

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  logos-format.py  pyproject.toml
logos_format/: logos_format.py
